--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ div#todoList {
   padding: 20px;
   border-radius: 10px;
 }
-div#todoList header {
+.header {
   display: flex;
   justify-content: space-between;
   padding: 10px 5px 25px;
@@ -111,4 +111,12 @@ div#todoList ul li .completed {
 
 .mt-1{
   margin-top: 1em;
+}
+
+.w-50{
+  width: 50%;
+}
+
+.w-25{
+  width: 25%;
 }
