--- a/src/index.css
+++ b/src/index.css
@@ -120,3 +120,11 @@ div#todoList ul li .completed {
 .w-25{
   width: 25%;
 }
+
+.todo-content{
+  color : red;
+}
+
+.text-center{
+  text-align: center;
+}
